--- a/SourceCode/Root/Files/CV.FTP/CV.FTP.csproj
+++ b/SourceCode/Root/Files/CV.FTP/CV.FTP.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{1062545F-8F71-424A-8608-1C5C06CE1912}</ProjectGuid>
+    <ProjectGuid>{00B5D0A1-20FF-4F27-A9F5-C45E15B17F4F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CV.Files</RootNamespace>
-    <AssemblyName>CV.Files</AssemblyName>
+    <RootNamespace>CV.FTP</RootNamespace>
+    <AssemblyName>CV.FTP</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,7 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ICSharpCode.SharpZipLib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,13 +40,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\Global\CV.Global\Properties\SharedAssemblyCopyright.cs">
-      <Link>Properties\SharedAssemblyCopyright.cs</Link>
-    </Compile>
-    <Compile Include="FileHelper.cs" />
-    <Compile Include="FileRolloverMgr.cs" />
+    <Compile Include="FTPManager.cs" />
+    <Compile Include="FTPWorker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ZipHelper.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Cache\CV.Cache\CV.Cache.csproj">
+      <Project>{83C1EDC3-D1B9-4114-9B9C-5307AA80D4CC}</Project>
+      <Name>CV.Cache</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CV.Files\CV.Files.csproj">
+      <Project>{1062545F-8F71-424A-8608-1C5C06CE1912}</Project>
+      <Name>CV.Files</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
